--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="../static/include/head">
 	<title>USUARIO</title>
@@ -13,90 +13,122 @@
 			<h2>GESTIONAR USUARIO</h2>
 		</div>
 
-		<div>
-			<form th:action="@{/grabarUsuario}" th:object="${usuario}" method="POST" enctype="multipart/form-data">
+		<section th:fragment="fragGestionUsuario">
 
-				<div class="d-flex flex-column gap-2">
-					<div class="row row-cols-3 ">
-						<div>
-							<label>ID</label>
-							<input class="form-control" th:field="*{id_usuario}" type="text" />
+			<div th:if="${param.success}">
+				<div class="alert alert-info">Se registró correctamente...</div>
+			</div>
+			<div class="card-header">
+				<h3 class="text-center">Formulario Registro Usuario</h3>
+			</div>
+			<div class="card-body">
+
+				<form role="form" method="post" th:action="@{/registraUsuario/guardar}" th:object="${usuario}"
+					enctype="multipart/form-data">
+
+					<div class="d-flex flex-column gap-2">
+						<div class="row row-cols-3 ">
+							<div>
+								<label>ID</label>
+								<input class="form-control" th:field="*{idUsuario}" type="text" placeholder="ID"
+									readonly />
+							</div>
+							<div>
+								<label>FECHA REG</label>
+								<input class="form-control" th:field="*{fecharegUsuario}" type="date"
+									placeholder="FECHA" readonly />
+							</div>
+							<div>
+								<label>ESTADO</label>
+								<input class="form-control" th:field="*{estadoUsuario}" type="text" placeholder="ESTADO"
+									readonly />
+							</div>
+						</div>
+
+						<div class="row row-cols-2 g-2">
+
+							<div>
+								<label for="nomUsuario">NOMBRE</label>
+								<input class="form-control" th:field="*{nomUsuario}" type="text" placeholder="NOMBRE"
+									name="nomUsuario" />
+								<p th:errors="*{nomUsuario}" class="text-danger"
+									th:if="${#fields.hasErrors('nomUsuario')}"></p>
+							</div>
+							<div>
+								<label for="apeUsuario">APELLIDO</label>
+								<input th:field="*{apeUsuario}" type="text" placeholder="APELLIDO" name="apeUsuario"
+									class="form-control" />
+								<p th:errors="*{apeUsu}" class="text-danger" th:if="${#fields.hasErrors('apeUsuario')}">
+								</p>
+							</div>
+
+							<div>
+								<label for="codUsuario">NOMBRE DE USUARIO</label>
+								<input class="form-control" th:field="*{codUsuario}" type="text"
+									placeholder="Nombre de Usuario" name="codUsuario" />
+							</div>
+
+							<div>
+								<label>TIPO</label>
+								<select th:field="*{tipoUsuario.idTipoUsuario}" class="form-select">
+									<option th:each="tipoUsuario : ${listaTipoUsuario}"
+										th:value="${tipoUsuario.idTipoUsuario}" th:text="${tipoUsuario.desTipoUsuario}">
+									</option>
+								</select>
+							</div>
+							<div>
+								<label for="telUsuario">TELEFONO</label>
+								<input class="form-control" th:field="*{telUsuario}" type="tel" placeholder="Telefono"
+									name="telUsuario" />
+							</div>
+							<div>
+								<label for="celUsuario">CELULAR</label>
+								<input class="form-control" th:field="*{celUsuario}" type="tel" placeholder="Celular"
+									name="celUsuario" />
+							</div>
+							<div>
+								<label>DISTRITO</label>
+								<select th:field="*{distritoUsuario}" class="form-select">
+									<option th:each="distrito : ${listaDistrito}" th:value="${distrito.idDistrito}"
+										th:text="${distrito.desDistrito}"></option>
+								</select>
+							</div>
+							<div>
+								<label for="dirUsuario">DIRECCION</label>
+								<input class="form-control" th:field="*{dirUsuario}" type="text" placeholder="Direccion"
+									name="dirUsuario" />
+							</div>
+							<div>
+								<label for="dniUsuario">DNI</label>
+								<input class="form-control" th:field="*{dniUsuario}" type="text" placeholder="DNI"
+									name="dniUsuario" />
+							</div>
+							<div>
+								<label for="emailUsuario">EMAIL</label>
+								<input class="form-control" th:field="*{emailUsuario}" type="email" placeholder="EMAIL"
+									name="emailUsuario" />
+							</div>
+							<div>
+								<label for="passwordUsuario">PASSWORD</label>
+								<input class="form-control" th:field="*{passwordUsuario}" type="text"
+									placeholder="Password" name="passwordUsuario" />
+							</div>
+							<div>
+								<label>IMAGEN</label>
+								<input class="form-control" name="imagen" type="file" th:field:"*{imagenUsuario}" />
+							</div>
 						</div>
 						<div>
-							<label>FECHA REG</label>
-							<input class="form-control" th:field="*{fechareg_usuario}" type="date" />
-						</div>
-						<div>
-							<label>ESTADO</label>
-							<input class="form-control" th:field="*{estado_usuario}" type="text" />
+							<button class="btn btn-success" type="submit">GRABAR</button>
+							<span>Estás registrado?
+								<a th:href="@{/login}">Ingresar aquí</a>
 						</div>
 					</div>
 
-					<div class="row row-cols-2 g-2">
+				</form>
+			</div>
 
-						<div>
-							<label>NOMBRE</label>
-							<input class="form-control" th:field="*{nom_usuario}" type="text" />
-						</div>
-						<div>
-							<label>APELLIDO</label>
-							<input class="form-control" th:field="*{ape_usuario}" type="text" />
-						</div>
-						
-						<div>
-							<label>NOMBRE DE USUARIO</label>
-							<input class="form-control" th:field="*{cod_usuario}" type="text" />
-						</div>
-						
-						<div>
-							<label>TIPO</label>
-							<select th:field="*{tipo_usuario.id_tipo_usuario}" class="form-select">
-								<option th:each="tipoUsuario : ${listaTipoUsuario}" th:value="${tipoUsuario.id_tipo_usuario}" th:text="${tipoUsuario.des_tipo_usuario}"></option>
-							</select>
-						</div>
-						<div>
-							<label>TELEFONO</label>
-							<input class="form-control" th:field="*{tel_usuario}" type="tel" />
-						</div>
-						<div>
-							<label>CELULAR</label>
-							<input class="form-control" th:field="*{cel_usuario}" type="tel" />
-						</div>
-						<div>
-							<label>DISTRITO</label>
-							<select th:field="*{distrito_usuario}" class="form-select">
-								<option th:each="distrito : ${listaDistrito}" th:value="${distrito.id_distrito}" th:text="${distrito.des_distrito}"></option>
-							</select>
-						</div>
-						<div>
-							<label>DIRECCION</label>
-							<input class="form-control" th:field="*{dir_usuario}" type="text" />
-						</div>
-						<div>
-							<label>DNI</label>
-							<input class="form-control" th:field="*{dni_usuario}" type="text" />
-						</div>
-						<div>
-							<label>EMAIL</label>
-							<input class="form-control" th:field="*{email_usuario}" type="email" />
-						</div>
-						<div>
-							<label>PASSWORD</label>
-							<input class="form-control" th:field="*{password_usuario}" type="text" />
-						</div>
-						<div>
-							<label>IMAGEN</label>
-							<input class="form-control" name="imagen" type="file" th:field:"*{imagen_usuario}" />
-						</div>
-					</div>
-					<div>
-						<button class="btn btn-success" type="submit">GRABAR</button>
-					</div>
-				</div>
-
-			</form>
-		</div>
-
+		</section>
 	</div>
 
 </body>
