--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -77,7 +77,7 @@
 									<h6>STOCK: </h6>
 									<ol th:text="${producto.stockProducto}"></ol>
 									<div>
-										<button class="btn btn-success">AGREGAR</button>
+										<a th:href="@{/agregarCarro{id}(id=${producto.idProducto})}" class="btn btn-success">AGREGAR</a>
 									</div>
 								</div>
 							</div>
