--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
@@ -33,7 +33,8 @@
 		</div>
 		
 		<div class="mt-4">
-			<button class="btn btn-success">COMPRAR</button>
+			<a href="#" class="btn btn-success ">COMPRAR</a>
+			<a href="#" class="btn btn-primary ">LIMPIAR CARRO</a>
 		</div>
 
 	</div>
