cambios sin revisar, tengo sueño

--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -38,6 +38,9 @@
 			<li class="nav-item">
 				<a class="nav-link" th:href="@{/listaProducto/{rol}(rol='cliente')}">CARTA</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" th:href="@{/listaPedido}">PEDIDO</a>
+			</li>
 
 			<li class="nav-item">
 				<a class="nav-link" href="/comentario">COMENTARIOS</a>
