--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
@@ -33,7 +33,7 @@
 		</div>
 		
 		<div class="mt-4">
-			<a href="#" class="btn btn-success ">COMPRAR</a>
+			<a href="/nuevoPedido" class="btn btn-success ">GENERAR PEDIDO</a>
 			<a href="#" class="btn btn-primary ">LIMPIAR CARRO</a>
 		</div>
 
