--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="modal-body">
 					
-					<section th:insert="registraUsuario::fragGestionUsuario"></section>
+					<div th:insert="registraUsuario::fragGestionUsuario"></div>
 					
 				</div>
 			</div>
